Bug: Allow words to wrap (ideally with hyphens)
hyphens isn't supported in everything so we fall back to word-wrap which does similar but without the hypen
https://caniuse.com/css-hyphens

--- a/_sass/base.body.scss
+++ b/_sass/base.body.scss
@@ -6,6 +6,9 @@ body {
     max-width: $container-width;
     text-rendering: optimizeLegibility;
 
+    word-wrap: break-word;
+    hyphens: auto;
+
     &::before {
         background: $colour-green;
         content: '';
